--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </picture>
         </a>
 
-        <button class="menu-btn menu__icon"  >
+        <button class="menu-btn menu__icon" type="button" >
           <svg class="menu-icon" width="32" height="32">
             <use href="./images/incons.svg#burger-menu"></use>
           </svg>
@@ -163,7 +163,7 @@
           <div class="carousel">
 
        
-          <div class="slide" style="background-image: url(./images/hero/hero1_lg.jpg);"> 
+          <div class="slide" style="background-image: url(./images/hero/hero1_md.jpg);"> 
               <h1 class="hero__title text--animated">
                 Наші круасани - це симфонія смаків.
               </h1>
@@ -171,8 +171,8 @@
             </div>
 
   
-           <div class="slide" style="background-image: url(./images/hero/hero2_lg.jpg);"></div>
-            <div class="slide" style="background-image: url(./images/hero/hero3_lg.jpg);"></div> 
+           <div class="slide" style="background-image: url(./images/hero/hero2_md.jpg);"></div>
+            <div class="slide" style="background-image: url(./images/hero/hero3_md.jpg);"></div> 
           </div>  
         </div>
       </section> 
