--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div class="carousel">
 
        
-          <div class="slide" style="background-image: url(./images/hero/hero1_md.jpg);"> 
+          <div class="slide" style="background-image: url(./images/hero/hero1_md.webp);"> 
               <h1 class="hero__title text--animated">
                 Наші круасани - це симфонія смаків.
               </h1>
@@ -171,8 +171,8 @@
             </div>
 
   
-           <div class="slide" style="background-image: url(./images/hero/hero2_md.jpg);"></div>
-            <div class="slide" style="background-image: url(./images/hero/hero3_md.jpg);"></div> 
+           <div class="slide" style="background-image: url(./images/hero/hero2_md.webp);"></div>
+            <div class="slide" style="background-image: url(./images/hero/hero3_md.webp);"></div> 
           </div>  
         </div>
       </section> 
