--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </picture>
         </a>
 
-        <button class="menu-btn menu__icon" type="button" >
+        <button class="menu-btn menu__icon" type="button" aria-label="open mobilemenu" >
           <svg class="menu-icon" width="32" height="32">
             <use href="./images/incons.svg#burger-menu"></use>
           </svg>
