--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
+      media="all"
     />
     <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,10 +19,11 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,700&display=swap"
       rel="stylesheet"
+      media="all"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" media="all" />
     <!--CSS-->
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
@@ -603,7 +605,7 @@
 
 
     <script src="./js/menu.js"></script>
-    <script src="./js/scripts.js"></script>
+    <script src="./js/scripts.js" ></script>
     <script src="./js/scripts2.js"></script>
   </body>
 </html>
