--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <source
                   srcset="
                     ./images/advantages/img-1_sm.jpg    1x,
-                    ./images/advantages/img-1_sm@2x.jpg 2x
+                    ./images/advantages/img-1_sm@2x.webp 2x
                   "
                   media="(max-width:767px)"
                 />
@@ -248,7 +248,7 @@
                 <source
                   srcset="
                     ./images/advantages/img-2_sm.jpg    1x,
-                    ./images/advantages/img-2_sm@2x.jpg 2x
+                    ./images/advantages/img-2_sm@2x.webp 2x
                   "
                   media="(max-width:767px)"
                 />
@@ -279,7 +279,7 @@
                 <source
                   srcset="
                     ./images/advantages/img-3_sm.jpg    1x,
-                    ./images/advantages/img-3_sm@2x.jpg 2x
+                    ./images/advantages/img-3_sm@2x.webp 2x
                   "
                   media="(max-width:767px)"
                 />
@@ -309,7 +309,7 @@
               <picture>
                 <source srcset="./images/products/img-menu-1_lg.jpg 1x, ./images/products/img-menu-1_lg@2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/products/img-menu-1_md.jpg 1x, ./images/products/img-menu-1_md@2x.jpg 2x" media="(min-width:768px)">
-                <source srcset="./images/products/img-menu-1_sm.jpg 1x, ./images/products/img-menu-1_sm@2x.jpg 2x" media="(max-width:767px)">
+                <source srcset="./images/products/img-menu-1_sm.jpg 1x, ./images/products/img-menu-1_sm@2x.webp 2x" media="(max-width:767px)">
               <img
                 class="products__img"
                 src="./images/products/img-menu-1_sm.jpg"
@@ -328,7 +328,7 @@
               <picture>
                 <source srcset="./images/products/img-menu-2_lg.jpg 1x, ./images/products/img-menu-2_lg@2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/products/img-menu-2_md.jpg 1x, ./images/products/img-menu-2_md@2x.jpg 2x" media="(min-width:768px)">
-                <source srcset="./images/products/img-menu-2_sm.jpg 1x, ./images/products/img-menu-2_sm@2x.jpg 2x" media="(max-width:767px)">
+                <source srcset="./images/products/img-menu-2_sm.jpg 1x, ./images/products/img-menu-2_sm@2x.webp 2x" media="(max-width:767px)">
               <img
                 class="products__img"
                 src="./images/products/img-menu-2_sm.jpg"
@@ -345,7 +345,7 @@
               <picture>
                 <source srcset="./images/products/img-menu-3_lg.jpg 1x, ./images/products/img-menu-3_lg@2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/products/img-menu-3_md.jpg 1x, ./images/products/img-menu-3_md@2x.jpg 2x" media="(min-width:768px)">
-                <source srcset="./images/products/img-menu-3_sm.jpg 1x, ./images/products/img-menu-3_sm@2x.jpg 2x" media="(max-width:767px)">
+                <source srcset="./images/products/img-menu-3_sm.jpg 1x, ./images/products/img-menu-3_sm@2x.webp 2x" media="(max-width:767px)">
               <img
                 class="products__img"
                 src="./images/products/img-menu-3_sm.jpg"
@@ -362,7 +362,7 @@
               <picture>
                 <source srcset="./images/products/img-menu-4_lg.jpg 1x, ./images/products/img-menu-4_lg@2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/products/img-menu-4_md.jpg 1x, ./images/products/img-menu-4_md@2x.jpg 2x" media="(min-width:768px)">
-                <source srcset="./images/products/img-menu-4_sm.jpg 1x, ./images/products/img-menu-4_sm@2x.jpg 2x" media="(max-width:767px)">
+                <source srcset="./images/products/img-menu-4_sm.jpg 1x, ./images/products/img-menu-4_sm@2x.webp 2x" media="(max-width:767px)">
               <img
                 class="products__img"
                 src="./images/products/img-menu-4_sm.jpg"
@@ -379,7 +379,7 @@
               <picture>
                 <source srcset="./images/products/img-menu-5_lg.jpg 1x, ./images/products/img-menu-5_lg@2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/products/img-menu-5_md.jpg 1x, ./images/products/img-menu-5_md@2x.jpg 2x" media="(min-width:768px)">
-                <source srcset="./images/products/img-menu-5_sm.jpg 1x, ./images/products/img-menu-5_sm@2x.jpg 2x" media="(max-width:767px)">
+                <source srcset="./images/products/img-menu-5_sm.jpg 1x, ./images/products/img-menu-5_sm@2x.webp 2x" media="(max-width:767px)">
               <img
                 class="products__img"
                 src="./images/products/img-menu-5_sm.jpg"
@@ -397,7 +397,7 @@
               <picture>
                 <source srcset="./images/products/img-menu-6_lg.jpg 1x, ./images/products/img-menu-6_lg@2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/products/img-menu-6_md.jpg 1x, ./images/products/img-menu-6_md@2x.jpg 2x" media="(min-width:768px)">
-                <source srcset="./images/products/img-menu-6_sm.jpg 1x, ./images/products/img-menu-6_sm@2x.jpg 2x" media="(max-width:767px)">
+                <source srcset="./images/products/img-menu-6_sm.jpg 1x, ./images/products/img-menu-6_sm@2x.webp 2x" media="(max-width:767px)">
               <img
                 class="products__img"
                 src="./images/products/img-menu-6_sm.jpg"
@@ -415,7 +415,7 @@
               <picture>
                 <source srcset="./images/products/img-menu-7_lg.jpg 1x, ./images/products/img-menu-7_lg@2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/products/img-menu-7_md.jpg 1x, ./images/products/img-menu-7_md@2x.jpg 2x" media="(min-width:768px)">
-                <source srcset="./images/products/img-menu-7_sm.jpg 1x, ./images/products/img-menu-7_sm@2x.jpg 2x" media="(max-width:767px)">
+                <source srcset="./images/products/img-menu-7_sm.jpg 1x, ./images/products/img-menu-7_sm@2x.webp 2x" media="(max-width:767px)">
               <img
                 class="products__img"
                 src="./images/products/img-menu-7_sm.jpg"
@@ -431,7 +431,7 @@
               <picture>
                 <source srcset="./images/products/img-menu-8_lg.jpg 1x, ./images/products/img-menu-8_lg@2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/products/img-menu-8_md.jpg 1x, ./images/products/img-menu-8_md@2x.jpg 2x" media="(min-width:768px)">
-                <source srcset="./images/products/img-menu-8_sm.jpg 1x, ./images/products/img-menu-8_sm@2x.jpg 2x" media="(max-width:767px)">
+                <source srcset="./images/products/img-menu-8_sm.jpg 1x, ./images/products/img-menu-8_sm@2x.webp 2x" media="(max-width:767px)">
               <img
                 class="products__img"
                 src="./images/products/img-menu-8_sm.jpg"
@@ -449,7 +449,7 @@
               <picture>
                 <source srcset="./images/products/img-menu-9_lg.jpg 1x, ./images/products/img-menu-9_lg@2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/products/img-menu-9_md.jpg 1x, ./images/products/img-menu-9_md@2x.jpg 2x" media="(min-width:768px)">
-                <source srcset="./images/products/img-menu-9_sm.jpg 1x, ./images/products/img-menu-9_sm@2x.jpg 2x" media="(max-width:767px)">
+                <source srcset="./images/products/img-menu-9_sm.jpg 1x, ./images/products/img-menu-9_sm@2x.webp 2x" media="(max-width:767px)">
               <img
                 class="products__img"
                 src="./images/products/img-menu-9_sm.jpg"
@@ -465,7 +465,7 @@
               <picture>
                 <source srcset="./images/products/img-menu-10_lg.jpg 1x, ./images/products/img-menu-10_lg@2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/products/img-menu-10_md.jpg 1x, ./images/products/img-menu-10_md@2x.jpg 2x" media="(min-width:768px)">
-                <source srcset="./images/products/img-menu-10_sm.jpg 1x, ./images/products/img-menu-10_sm@2x.jpg 2x" media="(max-width:767px)">
+                <source srcset="./images/products/img-menu-10_sm.jpg 1x, ./images/products/mg-menu-10_sm@2x.webp 2x" media="(max-width:767px)">
               <img
                 class="products__img"
                 src="./images/products/img-menu-10_sm.jpg"
@@ -481,7 +481,7 @@
               <picture>
                 <source srcset="./images/products/img-menu-11_lg.jpg 1x, ./images/products/img-menu-11_lg@2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/products/img-menu-11_md.jpg 1x, ./images/products/img-menu-11_md@2x.jpg 2x" media="(min-width:768px)">
-                <source srcset="./images/products/img-menu-11_sm.jpg 1x, ./images/products/img-menu-11_sm@2x.jpg 2x" media="(max-width:767px)">
+                <source srcset="./images/products/img-menu-11_sm.jpg 1x, ./images/products/img-menu-11_sm@2x.webp 2x" media="(max-width:767px)">
               <img
                 class="products__img"
                 src="./images/products/img-menu-11_sm.jpg"
@@ -499,7 +499,7 @@
               <picture>
                 <source srcset="./images/products/img-menu-12_lg.jpg 1x, ./images/products/img-menu-12_lg@2x.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/products/img-menu-12_md.jpg 1x, ./images/products/img-menu-12_md@2x.jpg 2x" media="(min-width:768px)">
-                <source srcset="./images/products/img-menu-12_sm.jpg 1x, ./images/products/img-menu-12_sm@2x.jpg 2x" media="(max-width:767px)">
+                <source srcset="./images/products/img-menu-12_sm.jpg 1x, ./images/products/img-menu-12_sm@2x.webp 2x" media="(max-width:767px)">
               <img
                 class="products__img"
                 src="./images/products/img-menu-12_sm.jpg"
