--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-      media=""
+      media="print" onload="this.media='all';"
     />
     <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,11 +19,11 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,700&display=swap"
       rel="stylesheet"
-      media=""
+      media="print" onload="this.media='all';"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" media="" />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" media="print" onload="this.media='all';" />
     <!--CSS-->
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
