--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     
     />
     <!--Font-->
+    <!--
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,7 +26,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"  />
+  -->
     <!--CSS-->
+    <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
