--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"  />
   -->
     <!--CSS-->
-    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
