--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>One11 Bakery</title>
+    <title>Купити свіжі круасани від One11 Bakery за оптовою ціною з безкоштовною доставкою до кафе ресторанів у Києві та Вишгороді</title>
+    <meta name="description" content="One11 Bakery пропонує замовити листкову випічку, асортимент солоних та солодких крафтових круасанів. Висока якість та неповторний смак! Оптові ціни, безкоштовна доставка по Києву та Вишгороду. Кращий вибір для вашого бізнесу! Замовте і ми станемо вашим найкращим постачальником!">
+
     <!--Normalize-->
 
     <link
